# www.cariotomotifjepara.or.id

./: .gitignore
scrapper-engine/: .env.example  pyproject.toml  requirements.txt
scrapper-engine/app/: main.py
scrapper-engine/app/contents/astra_honda_com/: scraper.py
scrapper-engine/app/core/: config.py  database.py
website-fe/: .env.example  .gitignore  .prettierrc  components.json  drizzle.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
website-fe/.husky/: pre-commit
website-fe/public/: banner_2.avif
website-fe/src/: middleware.ts
website-fe/src/app/: global-error.tsx  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
website-fe/src/app/(main)/: layout.tsx
website-fe/src/app/(marketing)/: page.tsx
website-fe/src/app/about/: page.tsx
website-fe/src/app/blog/: page.tsx
website-fe/src/app/contact/: page.tsx
website-fe/src/app/product/: page.tsx
website-fe/src/assets/: fonts.ts  globals.css
website-fe/src/common/constants/: brands.ts  index.ts  navigation.ts  page-routes.ts  table-constants.ts
website-fe/src/common/contents/: index.ts
website-fe/src/common/types/: brands.ts  index.ts  new-motorcylce.ts  route-type.ts  schema-type.ts  seo-type.ts  store-type.ts
website-fe/src/components/elements/: BackToTopButton.tsx  BenefitCard.tsx  CTABanner.tsx  Navbar.tsx  (+22 more)
website-fe/src/hooks/: index.ts  use-follow-pointer.ts  use-navbar-dropdown.ts  use-responsive.ts  useResponsive.ts
website-fe/src/lib/: auth.ts  config.ts  seo.ts  utils.ts
website-fe/src/services/: index.ts
(+133 files in other folders)
