[project]
name = "scrapper-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.6",
    "aiomysql>=0.2.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.12",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
]
